--- a/notebook2/Dockerfile
+++ b/notebook2/Dockerfile
@@ -16,7 +16,8 @@ RUN apk add \
   Flask_Sockets \
   kubernetes \
   'urllib3<1.24'\
-  libsass
+  libsass \
+  authlib
 
 COPY notebook /notebook
 COPY notebook-worker-images /notebook
